# xline

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  mock2.drawio
.ai/mocks/: mock2.drawio
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
aidocs/mocks/: iconpicker.drawio  mock3.drawio  mockup.drawio
aidocs/plans/: PLAN-SUBSTATUS.md
aidocs/showcase/: README.md  generate.py  pyproject.toml
src/: lib.rs  main.rs
src/config/: manager.rs  mod.rs  theme.rs  types.rs
src/core/: input.rs  mod.rs  render.rs  ring_cursor.rs  statusline.rs
src/core/components/: context_window.rs  cost.rs  directory.rs  git.rs  mod.rs  model.rs  output_style.rs  session.rs  usage.rs
src/data/: icon_catalog.rs  mod.rs  nerd_fonts.rs
src/presets/: mod.rs
src/presets/color_schemes/: cometix.rs  default.rs  gruvbox.rs  late.rs  minimal.rs  mod.rs  nord.rs  powerline_dark.rs  powerline_light.rs  rose_pine.rs  tokyo_night.rs
src/presets/icon_sets/: emoji.rs  late.rs  minimal.rs  mod.rs  nerd_font.rs  powerline.rs
src/tui/: app.rs  mod.rs
src/tui/widgets/: banner.rs  color_picker.rs  component_list.rs  confirm_dialog.rs  editor.rs  file_menu.rs  help_bar.rs  icon_picker.rs  import_menu.rs  key_hints.rs  mod.rs  name_input.rs  open_menu.rs  preview.rs  theme_bar.rs
