[package]
name = "xline"
version = "0.1.0"
edition = "2024"
description = "A terminal status line theme editor and renderer for Claude Code"
license = "MIT"
repository = "https://github.com/mevanlc/xline"
homepage = "https://github.com/mevanlc/xline"
readme = "README.md"
keywords = ["claude", "statusline", "terminal", "tui", "theme"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
unicode-width = "0.2"
emojis = "0.7"
unicode_names2 = "2"

[dev-dependencies]
tempfile = "3"
